[package]
name = "netns-rs"
version = "0.1.0"
authors = ["Carlos Valiente <carlos@pepelabs.net>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
clap = {version = "2.33.1", default-features = false}
netlink-packet-core = "0.1.0"
netlink-packet-route = "0.2.1"
netlink-packet-utils = "0.1.0"
netlink-sys = "0.2.0"
nix = "0.17.0"
thiserror = "1.0.18"
